# aurigin-protos

./: .gitignore  .gitleaks.toml  Makefile  NOTICE  README.md  buf.gen.yaml  buf.yaml
.claude/: CLAUDE.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  publish-codeartifact.yml  publish-npm.yml  publish-public.yml  publish-pypi.yml  publish.yml  release.yml
examples/: README.md
examples/audio/: generate-conversation.sh
examples/certs/: README.md  client.crt  client.key  server.crt  server.key
examples/python/: Justfile  _tls.py  client.py  generate_conversation.sh  phone_call.py  phone_call_burst.py  pyproject.toml  result_csv.py  server.py
examples/python/common/: __init__.py  result_csv.py  shutdown.py  tls.py  wav_reader.py
examples/python/sim/: __init__.py  curves.py  loader.py  runner.py
examples/python/tests/: test_smoke.py
examples/scenarios/: default.yaml  scenario.schema.json
examples/scenarios/edge/: confidence_oscillating.yaml  duplicate_detection.yaml  silence_gated_window.yaml  stream_ends_no_verdict.yaml  tail_dropped_below_min.yaml  tail_extended_full_coverage.yaml  tail_recomputed_full_coverage.yaml
examples/scenarios/failure/: grpc_deadline_exceeded.yaml  grpc_unavailable_midstream.yaml  model_timeout_event_error.yaml
examples/scenarios/happy/: confidence_linear_ramp.yaml  fake_detected_rising_curve.yaml  real_audio_detected_real.yaml
examples/typescript/: client.ts  package.json  phone_call.ts  phone_call_burst.ts  scenarios.ts  server.ts  tls.ts  tsconfig.json
examples/typescript/common/: index.ts  result_csv.ts  shutdown.ts  tls.ts  wav_reader.ts
examples/typescript/sim/: curves.ts  index.ts  loader.ts  runner.ts
examples/typescript/tests/: smoke.test.ts
infra/aws/: 01-oidc-provider-shared.md  02-publisher-role-and-codeartifact.md  README.md
infra/public/: 01-reserve-names.md  02-pypi-trusted-publisher.md  03-npm-oidc-publisher.md  04-public-release-checklist.md  README.md
proto/aurigin/deepfake_detection/v1/: deepfake_detection.proto
proto/twilio/tme/extensions/common/v1/: audio_buffer.proto
scripts/: publish-py-github.sh  publish-py.sh  publish-ts-codeartifact.sh  publish-ts-github.sh
