[project]
name = "aurigin-protos-examples"
version = "0.0.0"
description = "Reference server/client examples for aurigin-protos."
requires-python = ">=3.10"
dependencies = [
    "aurigin-protos",
    "grpcio>=1.62",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

# Mirrors the TypeScript example's `npm run server` / `npm run client`.
# After `uv sync`, run with `uv run server` / `uv run client` / `uv run phone-call`.
[project.scripts]
server = "server:serve"
client = "client:main"
phone-call = "phone_call:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["server.py", "client.py", "phone_call.py"]

# CodeArtifact registry for `aurigin-protos`. Refresh the token before `uv sync`
# (CodeArtifact tokens expire after 12h):
#   export CODEARTIFACT_AUTH_TOKEN=$(aws codeartifact get-authorization-token \
#     --domain aurigin-ai-domain --domain-owner 717279723333 \
#     --region eu-west-1 --query authorizationToken --output text)
[[tool.uv.index]]
name = "aurigin"
url = "https://aws:${CODEARTIFACT_AUTH_TOKEN}@aurigin-ai-domain-717279723333.d.codeartifact.eu-west-1.amazonaws.com/pypi/aurigin-shared/simple/"
explicit = true

[tool.uv.sources]
aurigin-protos = { index = "aurigin" }
